src/test/deca/context/invalid/provided/class34.java
class A {
    int x=5;
    void getX(){
        return this.x;
    }
}
{
    
}


